--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     <div class="skills">
       <h2>Skills</h2>
       <div class="skill-icons">
-        <img src="C:\Users\Acer\Downloads\Portfolio\powerbi.png" alt="Power BI" title="Power BI">
-        <img src="C:\Users\Acer\Downloads\Portfolio\xl2.png" alt="Excel Dashboards" title="Excel Dashboards">
-        <img src="C:\Users\Acer\Downloads\Portfolio\DV.png" alt="Visualization" title="Visualization">
-        <img src="C:\Users\Acer\Downloads\Portfolio\mysql.png" alt="SQL" title="SQL">
-        <img src="C:\Users\Acer\Downloads\Portfolio\GLS.png" alt="Google Looker Studio" title="Google Looker Studio">
-        <img src="C:\Users\Acer\Downloads\Portfolio\tab.png" alt="Google Looker Studio" title="Tableau">
+        <img src="powerbi.png" alt="Power BI" title="Power BI">
+        <img src="xl2.png" alt="Excel Dashboards" title="Excel Dashboards">
+        <img src="DV.png" alt="Visualization" title="Visualization">
+        <img src="mysql.png" alt="SQL" title="SQL">
+        <img src="GLS.png" alt="Google Looker Studio" title="Google Looker Studio">
+        <img src=" tab.png" alt="Google Looker Studio" title="Tableau">
       </div>
     </div>
     <br>
