--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <div class="container">
     <h1>
-      <img src="C:\Users\Acer\Downloads\MyImg1.jpg" alt="Milan's Image">
+      <img src="MyImg1.jpg" alt="Milan's Image">
       Milan Ka Portfolio
     </h1>
     <br>
