--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         1. Data Quality Assessment
         2. Data Insights
         3. Data Presentation through Report Dashboard.</p>
-      <img src="C:\Users\Acer\Downloads\Portfolio\KPMGVIC.jpg" alt="Achievement 2">
+      <img src="KPMGVIC.jpg" alt="Achievement 2">
       <br>
       <br>
       <p>3: 🎓 Proudly Completed a 6-week online training on Data Science. 🚀 </p>
@@ -159,7 +159,7 @@
         3. Understanding the Statistics for Data Science 
         4. Predictive Modeling
         5. Basics of Machine Learning</p>
-      <img src="C:\Users\Acer\Downloads\Portfolio\int.jpg" alt="Achievement 3">
+      <img src="int.jpg" alt="Achievement 3">
       <p><a href="https://trainings.internshala.com/verify_certificate">Click here for Certificate authentication.</a></p>
     </div>
 
