--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <h2>Projects and Dashboards</h2>
       <h3>1: Addidas US Sales Dashboard using Microsoft Excel</h3>
       <p>This is my latest Excel dashboard showcasing my data analysis skills. <br> I learned how to clean and organize the data. Using Pivot Tables and Charts. I also learned to use Maps function of the MS Excel.</p>
-      <img src="Adidas Sales Dashboard\2.jpg" alt="Excel Dashboard">
+      <img src="2.jpg" alt="Excel Dashboard">
       <br>
       <br>
       <h3>2: Beverage Sales in USA Dashboard using Microsoft Power BI</h3>
