--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background: radial-gradient(purple, rgb(255, 115, 255), blue, black);
+      background: linear-gradient(black,blue,rgb(255, 115, 255), purple);
       color: white;
       font-family: 'Roboto', Arial, sans-serif;
     }
