--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(black,blue,black,blue);
+      background: linear-gradient(black,blue,black);
       color: white;
       font-family: 'Roboto', Arial, sans-serif;
     }
@@ -176,7 +176,7 @@
     <div class="contact">
       <p>Contact me:</p>
       <a href="mailto:milan5630235@gmail.com">milan5630235@gmail.com</a>
-      <a href="https://linkedin.com/in/milan-saxena-5ab22319b/" target="_blank">LinkedIn Profile</a>
+      <a href="https://linkedin.com/in/milan-saxena-5ab22319b/" target="_blank">My LinkedIn Profile</a>
     </div>
   </div>
 </body>
